# fontdump

./: CMakeLists.txt  README.md
include/font/: FontFile.h  FontStructures.h  RgbaImage.h
src/fontdump/: CMakeLists.txt  main.cpp
src/libfont/: CMakeLists.txt  FontFile.cpp  RgbaImage.cpp  TrivialStreamRead.h
